select x_default topic

--- a/assets/javascripts/discourse/connectors/edit-topic/custom-language-fields.hbs
+++ b/assets/javascripts/discourse/connectors/edit-topic/custom-language-fields.hbs
@@ -1,16 +1,15 @@
 <div class="custom-language-field-row">
   {{#if this.isAlternates}}
     <label class="custom-language-label">{{i18n "discourse_category_language.alternates_topic_label"}}</label>
-    <ComboBox
-      @content={{this.availableTopics}}
-      @values={{this.selectedTopics}}
-      @valueProperty="value"
-      @nameProperty="label"
-      @placeholder="Type to search..."
-      @onSearch={{this.searchTopics}}
-      @onChange={{this.onChangeTopics}}
-      @multiple={{true}}
-    />
+      <MultiSelect
+        @content={{this.availableTopics}}
+        @value={{this.selectedTopics}}
+        @onSearch={{this.searchTopics}}
+        @onChange={{this.onChangeTopics}}
+        @valueProperty="value"
+        @nameProperty="label"
+        @placeholder="Type to search..."
+      />
   {{else}}
     <label class="custom-language-label">{{i18n "discourse_category_language.default_topic_label"}}</label>
     <ComboBox
