--- a/assets/javascripts/discourse/templates/admin/plugins-discourse-category-language.hbs
+++ b/assets/javascripts/discourse/templates/admin/plugins-discourse-category-language.hbs
@@ -1,57 +1,92 @@
-<div class="discourse-category-language-container p-8">
-  <div class="flex justify-between items-center mb-6">
-    <h1 class="text-3xl font-bold">{{i18n "admin.title_management"}}</h1>
-    <button class="btn btn-primary" {{action "addLanguage"}}>
-      {{i18n "admin.add_language_button"}}
-    </button>
-  </div>
+<template>
+  <div class="discourse-category-language-container p-8">
+    <div class="flex justify-between items-center mb-6">
+      <h1 class="text-3xl font-bold">{{i18n "admin.title_management"}}</h1>
+      <button class="btn btn-primary" {{action "addLanguage"}}>
+        {{i18n "admin.add_language_button"}}
+      </button>
+    </div>
 
-  <table class="discourse-table w-full border-collapse">
-    <thead>
-      <tr class="bg-gray-100">
-        <th class="px-4 py-2 text-left text-gray-600">{{i18n "admin.name_header"}}</th>
-        <th class="px-4 py-2 text-left text-gray-600">{{i18n "admin.slug_header"}}</th>
-        <th class="px-4 py-2 text-right text-gray-600">{{i18n "admin.actions_header"}}</th>
-      </tr>
-    </thead>
-    <tbody>
-      {{#each this.languages as |language|}}
-        <tr class="border-b">
-          <td class="px-4 py-2">{{language.name}}</td>
-          <td class="px-4 py-2">{{language.slug}}</td>
-          <td class="px-4 py-2 text-right">
-            <button class="btn btn-icon" {{action "editLanguage" language}}>
-              <svg class="fa d-icon d-icon-pencil svg-icon svg-string" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"><use href="#pencil"></use></svg>
-            </button>
-            <button class="btn btn-icon" {{action "deleteLanguage" language}} disabled={{eq language.id 1}}>
-              <svg class="fa d-icon d-icon-trash-can svg-icon svg-string" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"><use href="#trash-can"></use></svg>
-            </button>
-          </td>
+    <table class="discourse-table w-full border-collapse">
+      <thead>
+        <tr class="bg-gray-100">
+          <th class="px-4 py-2 text-left text-gray-600">{{i18n
+              "admin.name_header"
+            }}</th>
+          <th class="px-4 py-2 text-left text-gray-600">{{i18n
+              "admin.slug_header"
+            }}</th>
+          <th class="px-4 py-2 text-right text-gray-600">{{i18n
+              "admin.actions_header"
+            }}</th>
         </tr>
-      {{/each}}
-    </tbody>
-  </table>
+      </thead>
+      <tbody>
+        {{#each this.languages as |language|}}
+          <tr class="border-b">
+            <td class="px-4 py-2">{{language.name}}</td>
+            <td class="px-4 py-2">{{language.slug}}</td>
+            <td class="px-4 py-2 text-right">
+              <button class="btn btn-icon" {{action "editLanguage" language}}>
+                <svg
+                  class="fa d-icon d-icon-pencil svg-icon svg-string"
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                ><use href="#pencil"></use></svg>
+              </button>
+              <button
+                class="btn btn-icon"
+                {{action "deleteLanguage" language}}
+                disabled={{eq language.id 1}}
+              >
+                <svg
+                  class="fa d-icon d-icon-trash-can svg-icon svg-string"
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                ><use href="#trash-can"></use></svg>
+              </button>
+            </td>
+          </tr>
+        {{/each}}
+      </tbody>
+    </table>
 
-  {{#if this.showModal}}
-    <DModal @title={{if this.editingLanguage (i18n "admin.edit_language_title") (i18n "admin.add_language_title")}} @close={{action "closeModal"}}>
-      <div class="modal-body">
-        <div class="form-group">
-          <label>{{i18n "admin.name_header"}}</label>
-          {{input value=this.newLanguageName class="form-control"}}
+    {{#if this.showModal}}
+      <DModal
+        @title={{if
+          this.editingLanguage
+          (i18n "admin.edit_language_title")
+          (i18n "admin.add_language_title")
+        }}
+        @close={{action "closeModal"}}
+      >
+        <div class="modal-body">
+          <div class="form-group">
+            <label>{{i18n "admin.name_header"}}</label>
+            {{input value=this.newLanguageName class="form-control"}}
+          </div>
+          <div class="form-group">
+            <label>{{i18n "admin.slug_header"}}</label>
+            {{input
+              value=this.newLanguageSlug
+              class="form-control"
+              disabled=this.editingLanguage
+            }}
+          </div>
         </div>
-        <div class="form-group">
-          <label>{{i18n "admin.slug_header"}}</label>
-          {{input value=this.newLanguageSlug class="form-control" disabled=this.editingLanguage}}
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" {{action "closeModal"}}>
+            {{i18n "admin.cancel_button"}}
+          </button>
+          <button
+            type="button"
+            class="btn btn-primary"
+            {{action "saveLanguage"}}
+          >
+            {{i18n "admin.save_button"}}
+          </button>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" {{action "closeModal"}}>
-          {{i18n "admin.cancel_button"}}
-        </button>
-        <button type="button" class="btn btn-primary" {{action "saveLanguage"}}>
-          {{i18n "admin.save_button"}}
-        </button>
-      </div>
-    </DModal>
-  {{/if}}
-</div>
+      </DModal>
+    {{/if}}
+  </div>
+</template>
