restore admin view

--- a/assets/javascripts/discourse/connectors/edit-topic/custom-language-fields.hbs
+++ b/assets/javascripts/discourse/connectors/edit-topic/custom-language-fields.hbs
@@ -1,3 +1,4 @@
+{{! template-lint-disable require-strict-mode }}
 <div class="custom-language-field-row">
   {{#if this.isAlternates}}
     <label class="custom-language-label">{{i18n "discourse_category_language.alternates_topic_label"}}</label>
